--- a/config-flash-sale.json
+++ b/config-flash-sale.json
@@ -1,5 +1,5 @@
 {
-	"status" : "true",	
+	"status" : "false",	
 	"startDate" : "2019 10 05 14 20 0",
 	"endDate" : "2019 10 05 15 0 0",
 	"desktopImg" : "https://zeniuseducation.com/wp-content/uploads/2019/11/-Banner-30_ok.png",
