--- a/config-flash-sale.json
+++ b/config-flash-sale.json
@@ -1,7 +1,8 @@
 {
-	"status" : "true",	
-	"startDate" : "2019 10 05 18 0 0",
-	"endDate" : "2019 10 05 22 0 0",
+	"status" : "true",
+    "prod" : "false",	
+	"startDate" : "2019 10 06 12 0 0",
+	"endDate" : "2019 10 06 15 0 0",
 	"desktopImg" : "https://zeniuseducation.com/wp-content/uploads/2019/11/WEB-Banner-30_ok.png",
 	"desktopUrl" : {
 		"home" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Home-mobile&utm_campaign=FlashSale-0919",
@@ -10,7 +11,13 @@
 		"prologmateri" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Prolog-Materi-mobile&utm_campaign=FlashSale-0919",
 		"downloadSoal" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Download-Soal-mobile&utm_campaign=FlashSale-0919"	
 	},
-	"desktopRole" : "guest/member",
+	"desktopRole" : {
+		"inactive" : false,
+		"guest" : true,
+		"member" : true,
+		"premium" : false,
+		"all" : false
+	},
 	"mobileImg" : "https://zeniuseducation.com/wp-content/uploads/2019/11/22OCT.jpg",
 	"mobileUrl" : {
 		"home" : "https://fdl.zenius.net/mobile/membership",
@@ -19,7 +26,13 @@
 		"prologmateri" : "https://fdl.zenius.net/mobile/membership",
 		"downloadSoal" : "https://fdl.zenius.net/mobile/membership"	
 	},
-	"mobileRole" : "guest/member",
+	"mobileRole" : {
+		"inactive" : false,
+		"guest" : true,
+		"member" : true,
+		"premium" : false,
+		"all" : false
+	},
 	"iosImg" : "https://zeniuseducation.com/wp-content/uploads/2019/11/WEB-Banner-30_ok.png",
 	"iosUrl" : {
 		"home" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Home-Mobile&utm_campaign=FlashSale-0919",
@@ -28,7 +41,13 @@
 		"prologmateri" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Prolog-Materi-Mobile&utm_campaign=FlashSale-0919",
 		"downloadSoal" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Download-Soal-Mobile&utm_campaign=FlashSale-0919"	
 	},
-	"iosRole" : "guest/member",
+	"iosRole" : {
+		"inactive" : false,
+		"guest" : true,
+		"member" : true,
+		"premium" : false,
+		"all" : false
+	},
 	"iphoneImg" : "https://zeniuseducation.com/wp-content/uploads/2019/11/22OCT.jpg",
 	"iphoneUrl" : {
 		"home" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Home-Mobile&utm_campaign=FlashSale-0919",
@@ -37,5 +56,11 @@
 		"prologmateri" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Prolog-Materi-Mobile&utm_campaign=FlashSale-0919",
 		"downloadSoal" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Download-Soal-Mobile&utm_campaign=FlashSale-0919"	
 	},
-	"iphoneRole" : "guest/member"
+	"iphoneRole" : {
+		"inactive" : false,
+		"guest" : true,
+		"member" : true,
+		"premium" : false,
+		"all" : false
+	}
 }
