--- a/config-flash-sale.json
+++ b/config-flash-sale.json
@@ -1,6 +1,6 @@
 {
 	"status" : "true",
-    "prod" : "true",	
+    "prod" : "false",	
 	"startDate" : "2019 10 06 12 0 0",
 	"endDate" : "2019 10 20 23 59 59",
 	"desktopImg" : "https://zeniuseducation.com/wp-content/uploads/2019/11/Web-Banner-copy.jpg",
