--- a/config-flash-sale.json
+++ b/config-flash-sale.json
@@ -33,7 +33,7 @@
 		"premium" : false,
 		"all" : false
 	},
-	"iosImg" : "https://zeniuseducation.com/wp-content/uploads/2019/11/WEB-Banner-30_ok.png",
+	"iosImg" : "https://zeniuseducation.com/wp-content/uploads/2019/11/Mobile-Banner-Campaign-UN.jpg",
 	"iosUrl" : {
 		"home" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Home-Mobile&utm_campaign=FlashSale-0919",
 		"membership" : "",
@@ -42,9 +42,9 @@
 		"downloadSoal" : "https://www.zenius.net/membership?utm_source=Internal&utm_medium=Internal-Ad-Download-Soal-Mobile&utm_campaign=FlashSale-0919"	
 	},
 	"iosRole" : {
-		"inactive" : true,
-		"guest" : false,
-		"member" : false,
+		"inactive" : false,
+		"guest" : true,
+		"member" : true,
 		"premium" : false,
 		"all" : false
 	},
